--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,6 @@ deploy_staging:
     name: staging
     url: 172.26.32.115
   script:
-    - ssh root@172.26.32.115 "cd /opt/app/git/hdfs-prod-bk && echo 'Inside hdfs-prod-bk directory' && git checkout master && echo 'Checked out master' && git pull origin master && su - hdfs -c 'hdfs dfs -put -f /opt/app/git/hdfs-prod-bk/PROD/* /PROD' && exit"
+    - ssh root@172.26.32.115 "cd /opt/app/git/hdfs-prod-bk && git checkout master && git pull origin master && su - hdfs -c 'hdfs dfs -put -f /opt/app/git/hdfs-prod-bk/PROD/* /PROD' && exit"
   only:
     - master
