--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -213,7 +213,7 @@ crontasks +=
   {
     instanceId = "LOAD_FT_VOICE_SMS",
     cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice_sms.conf",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
@@ -228,7 +228,7 @@ crontasks +=
   {
     instanceId = "LOAD_FT_VOICE_SMS_POST",
     cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice_sms_post.conf",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
@@ -621,7 +621,7 @@ crontasks +=
 
 
 //--###**************************************#####---
-//--###        CHARGEMENT FT MSC  
+//--###        CHARGEMENT & CALCULS MSC  
 //--###**************************************#####---
 // Chargement de FT AG INTERCO
 crontasks +=
