--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -241,7 +241,7 @@ crontasks +=
 // Chargement FT IN ZTE SUBCRIPTION
 crontasks +=
   {
-    instanceId = "LOAD_FT_SUBCRIPTION",
+    instanceId = "LOAD_FT_SUBSCRIPTION",
     cron = "0 */15 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf",
     taskType = "HIVE"
