compute FT disabled in system-cron-task

--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -204,198 +204,6 @@ crontasks +=
   }
 
 
-//--###**************************************#####---
-//--###        CHARGEMENT FT IN  
-//--###**************************************#####---
-
-
-// Chargement FT IN ZTE VOICE_SMS
-crontasks +=
-  {
-    instanceId = "LOAD_FT_VOICE_SMS",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-// Chargement FT IN ZTE VOICE_SMS_POST
-crontasks +=
-  {
-    instanceId = "LOAD_FT_VOICE_SMS_POST",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-// Chargement FT IN ZTE SUBCRIPTION
-crontasks +=
-  {
-    instanceId = "LOAD_FT_SUBSCRIPTION",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-// Chargement FT IN ZTE RECHARGE
-crontasks +=
-  {
-    instanceId = "LOAD_FT_RECHARGE",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-recharge.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-// Chargement FT IN ZTE OVERDRAFT
-crontasks +=
-  {
-    instanceId = "LOAD_FT_OVERDRAFT",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-// Chargement FT IN ZTE EMERGENCY DATA
-crontasks +=
-  {
-    instanceId = "LOAD_FT_EMERGENCY_DATA",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-// Chargement FT IN ZTE DATA
-crontasks +=
-  {
-    instanceId = "LOAD_FT_DATA",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-// Chargement FT IN ZTE DATA_TRANSFER
-crontasks +=
-  {
-    instanceId = "LOAD_FT_DATA_TRANSFER",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-// Chargement FT IN ZTE CREDIT_TRANSFER
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CREDIT_TRANSFER",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-// Chargement FT IN ZTE DATA POST
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CRA_GPRS_POST",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-// Chargement FT IN ZTE CONTRACT_SNAPSHOT
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-
-
-// Chargement FTA IN DATA_TRANSFER
- crontasks +=
-  {
-    instanceId = "LOAD_FT_A_DATA_TRANSFER",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
 
 /////////////////////////////////////////////////////
 //                CHECK FILES IN                   //
@@ -574,55 +382,6 @@ crontasks +=
   }
 
 
-//--###**************************************#####---
-//--###        CHARGEMENT & CALCULS MSC  
-//--###**************************************#####---
-// Chargement de FT AG INTERCO
-crontasks +=
-  {
-    instanceId = "LOAD_FT_AG_INTERCO",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/MSC/load-ft-ag-interco.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-// Chargement de FT MSC TRANSACTION
-crontasks +=
-  {
-    instanceId = "LOAD_FT_MSC_TRANSACTION",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/MSC/load-ft-msc-transaction.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-// Chargement de FT X INTERCO
-crontasks +=
-  {
-    instanceId = "LOAD_FT_X_INTERCO_FINAL",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/MSC/load-ft-x-interco-final.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
 
 /////////////////////////////////////////////////////
 //                   CDR ZEBRA                    //
@@ -673,40 +432,6 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
-
-//--###**************************************#####---
-//--###        CHARGEMENT FT ZEBRA  
-//--###**************************************#####---
-// Chargement de ZEBRA FT REFILL
-crontasks +=
-  {
-    instanceId = "LOAD_FT_REFILL",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/ZEBRA/FT/load-ft-refill.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-  // Chargement de ZEBRA FT SUBS RETAIL
-crontasks +=
-  {
-    instanceId = "LOAD_FT_SUBS_RETAIL_ZEBRA",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/ZEBRA/FT/load-ft-subs-retail-zebra.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
 
 /////////////////////////////////////////////////////
 //                   CDR   P2P                    //
@@ -816,20 +541,7 @@ crontasks +=
     ]
   }
 
-// Archivage des données IN_ZTE
-crontasks +=
-  {
-    instanceId = "ARCH_ZTE",
-    cron = "0 0 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/arch-in-zte.conf",
-    taskType = "PIG"
-    taskLauncher = ${PIG_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.PigScriptLauncher"}
-    ]
-  }
+
 
 // Chargement des logs Nifi
 crontasks +=
@@ -846,17 +558,311 @@ crontasks +=
     ]
   }
   
-// Archivage des logs Nifi
-crontasks +=
-  {
-    instanceId = "ARCH_LOGS",
-    cron = "0 0 */1 * * ?",
-    configFile = "/PROD/CONF/NIFI_LOGS/arch-logs.conf",
-    taskType = "PIG"
-    taskLauncher = ${PIG_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.PigScriptLauncher"}
-    ]
-  }
+// //--###**************************************#####---
+////--###        CHARGEMENT FT IN
+////--###**************************************#####---
+//
+//
+//// Chargement FT IN ZTE VOICE_SMS
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_VOICE_SMS",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//// Chargement FT IN ZTE VOICE_SMS_POST
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_VOICE_SMS_POST",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//// Chargement FT IN ZTE SUBCRIPTION
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_SUBSCRIPTION",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//
+//// Chargement FT IN ZTE RECHARGE
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_RECHARGE",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-recharge.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//
+//// Chargement FT IN ZTE OVERDRAFT
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_OVERDRAFT",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//
+//// Chargement FT IN ZTE EMERGENCY DATA
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_EMERGENCY_DATA",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//// Chargement FT IN ZTE DATA
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_DATA",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//// Chargement FT IN ZTE DATA_TRANSFER
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_DATA_TRANSFER",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//// Chargement FT IN ZTE CREDIT_TRANSFER
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CREDIT_TRANSFER",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//
+//// Chargement FT IN ZTE DATA POST
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CRA_GPRS_POST",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//// Chargement FT IN ZTE CONTRACT_SNAPSHOT
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//
+//
+//
+//// Chargement FTA IN DATA_TRANSFER
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_DATA_TRANSFER",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//*/
+//
+////--###**************************************#####---
+////--###        CHARGEMENT & CALCULS MSC
+////--###**************************************#####---
+//// Chargement de FT AG INTERCO
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_AG_INTERCO",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/MSC/load-ft-ag-interco.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//// Chargement de FT MSC TRANSACTION
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_MSC_TRANSACTION",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/MSC/load-ft-msc-transaction.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//
+//// Chargement de FT X INTERCO
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_X_INTERCO_FINAL",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/MSC/load-ft-x-interco-final.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//
+//
+////--###**************************************#####---
+////--###        CHARGEMENT FT ZEBRA
+////--###**************************************#####---
+//// Chargement de ZEBRA FT REFILL
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_REFILL",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/ZEBRA/FT/load-ft-refill.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//  // Chargement de ZEBRA FT SUBS RETAIL
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_SUBS_RETAIL_ZEBRA",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/ZEBRA/FT/load-ft-subs-retail-zebra.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//
+//
+//// Archivage des données IN_ZTE
+//crontasks +=
+//  {
+//    instanceId = "ARCH_ZTE",
+//    cron = "0 0 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/arch-in-zte.conf",
+//    taskType = "PIG"
+//    taskLauncher = ${PIG_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.PigScriptLauncher"}
+//    ]
+//  }
+// // Archivage des logs Nifi
+//crontasks +=
+//  {
+//    instanceId = "ARCH_LOGS",
+//    cron = "0 0 */1 * * ?",
+//    configFile = "/PROD/CONF/NIFI_LOGS/arch-logs.conf",
+//    taskType = "PIG"
+//    taskLauncher = ${PIG_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.PigScriptLauncher"}
+//    ]
+//  }
