compute FT disabled in system-cron-task

--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -433,24 +433,24 @@ crontasks +=
     ]
   }
 
-/////////////////////////////////////////////////////
-//                   CDR   P2P                    //
-////////////////////////////////////////////////////
-
-// Chargement de IT P2P
-crontasks +=
-  {
-    instanceId = "LOAD_IT_P2P",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/P2P/load-it-p2p.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+///////////////////////////////////////////////////////
+////                   CDR   P2P                    //
+//////////////////////////////////////////////////////
+//
+//// Chargement de IT P2P
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_P2P",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/P2P/load-it-p2p.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 /////////////////////////////////////////////////////
 //              Orange Money                       //
