--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -321,11 +321,11 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_CUST_EXTRACT",
-    cron = "0 */5 * * * ?",
+    cron = "0 0 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-cust-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "12 minutes"
+    timeout = "120 minutes"
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
