--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -65,7 +65,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ADJUSTMENT",
-    cron = "0 */15 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-adjustment.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -81,7 +81,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_BALANCE_RESET",
-    cron = "0 */15 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-balance_reset.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -97,7 +97,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_DATA_POST",
-    cron = "0 */15 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -113,7 +113,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_EMERGENCY_CREDIT",
-    cron = "0 */15 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-emergency-credit.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -129,7 +129,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_EMERGENCY_DATA",
-    cron = "0 */15 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-emergency-data.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -144,7 +144,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_PROFILE",
-    cron = "0 */15 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-profile.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -160,7 +160,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_RECHARGE",
-    cron = "0 */15 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-recharge.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -176,7 +176,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_TRANSFER",
-    cron = "0 */15 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-transfer.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -191,7 +191,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_VOICE_SMS_POST",
-    cron = "0 */15 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf",
     taskType = "HIVE"
 
@@ -246,7 +246,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_PROD_SPEC_EXTRACT",
-    cron = "0 0 */1 * * ?",
+    cron = "0 10 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-spec-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -261,7 +261,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_PRICE_PLAN_EXTRACT",
-    cron = "0 0 */1 * * ?",
+    cron = "0 10 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -276,7 +276,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_ACC_NBR_EXTRACT",
-    cron = "0 0 */1 * * ?",
+    cron = "0 05 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acc-nbr-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -291,7 +291,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_ACCT_EXTRACT",
-    cron = "0 0 */1 * * ?",
+    cron = "0 05 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acct-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -336,7 +336,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_PROD_EXTRACT",
-    cron = "0 0 */1 * * ?",
+    cron = "0 15 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -351,7 +351,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_SUBS_EXTRACT",
-    cron = "0 0 */1 * * ?",
+    cron = "0 15 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-subs-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -366,7 +366,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_BAL_SNAP",
-    cron = "0 0 */1 * * ?",
+    cron = "0 20 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-bal_snap.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -382,7 +382,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_DEL_EXPBAL",
-    cron = "0 0 */1 * * ?",
+    cron = "0 20 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-del_expbal.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -403,7 +403,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_CRA_MSC_HUAWEI",
-    cron = "0 */15 * * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/MSC/load-it-cra-msc-huawei.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -424,7 +424,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZEBRA_CHECKFILE",
-    cron = "0 */15 * * * ?",
+    cron = "0 */25 * * * ?",
     configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-checkfile.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -440,7 +440,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZEBRA_MASTER",
-    cron = "0 */15 * * * ?",
+    cron = "0 */25 * * * ?",
     configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-master.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -455,7 +455,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZEBRA_TRANSAC",
-    cron = "0 */15 * * * ?",
+    cron = "0 */25 * * * ?",
     configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-transac.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -474,7 +474,7 @@ crontasks +=
 //crontasks +=
 //  {
 //    instanceId = "LOAD_IT_P2P",
-//    cron = "0 */15 * * * ?",
+//    cron = "0 30 */1 * * ?",
 //    configFile = "/PROD/CONF/P2P/load-it-p2p.conf",
 //    taskType = "HIVE"
 //    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -493,7 +493,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_TRANSACTIONS",
-    cron = "0 0 */1 * * ?",
+    cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-transactions.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -507,7 +507,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_APGL",
-    cron = "0 0 */1 * * ?",
+    cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-apgl.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -521,7 +521,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_ALL_BALANCE",
-    cron = "0 0 */1 * * ?",
+    cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-all-balance.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -535,7 +535,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_COMMISSIONS",
-    cron = "0 0 */1 * * ?",
+    cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-commissions.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -549,7 +549,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_SERVICES_CHARGES",
-    cron = "0 0 */1 * * ?",
+    cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-services-charges.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -563,7 +563,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_SUBSCRIBERS",
-    cron = "0 0 */1 * * ?",
+    cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-subscribers.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -580,7 +580,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_NIFI_LOGS",
-    cron = "0 */15 * * * ?",
+    cron = "0 */12 * * * ?",
     configFile = "/PROD/CONF/NIFI_LOGS/load-it-log.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
