--- a/PROD/CONF/compute_ft_daily_status.conf
+++ b/PROD/CONF/compute_ft_daily_status.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "COMPUTE_MISSING_FILES"
+flux.name = "COMPUTE_FT_DAILY_STATUS"
 
 flux.has-date-processing = true
 
@@ -18,7 +18,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 
-flux.exec-queries += "/PROD/SCRIPTS/compute_missing_files.hql"
+flux.exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
