Correction du crontasks pour COMPUTE_FT_DAILY_STATUS

--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -884,12 +884,12 @@ crontasks +=
   }
 
 
-// // CALCUL DES FICHIERS COMPUTE_FT_DAILY_STATUS
+// // CALCUL DES COMPUTE_FT_DAILY_STATUS
 crontasks +=
   {
     instanceId = "COMPUTE_FT_DAILY_STATUS",
     cron = "0 0 7 * * ?",
-    configFile = "/PROD/CONF/compute_missing_files.conf",
+    configFile = "/PROD/CONF/compute_ft_daily_status.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
