--- a/PROD/CONF/IN_ZTE/arch-in-zte.conf
+++ b/PROD/CONF/IN_ZTE/arch-in-zte.conf
@@ -19,4 +19,6 @@ flux.source-dirs += "/PROD/ARCH/IN_ZTE/SUBSCRIPTION"
 flux.source-dirs += "/PROD/ARCH/IN_ZTE/TRANSFER"
 flux.source-dirs += "/PROD/ARCH/IN_ZTE/VOICE_SMS"
 
+flux.source-dirs += "/PROD/ARCH/NIFI_LOGS"
+
 flux.pig.script = "hdfs://ocmhdp/PROD/SCRIPTS/COMPRESSION/compress.pig"
