--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -890,7 +890,7 @@ crontasks +=
   }
 
 
-// CALCUL DES FICHIERS COMPUTE_FT_DAILY_STATUS
+// CALCUL COMPUTE_FT_DAILY_STATUS
 crontasks +=
   {
     instanceId = "COMPUTE_FT_DAILY_STATUS",
