--- a/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
@@ -15,16 +15,16 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/prequery_ft_data.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_cra_gprs.hql"
 
-flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/computer_and_insert_into_ft_a_gprs_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/computer_and_insert_into_ft_a_gprs_activity.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_activity.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
