--- a/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
@@ -19,6 +19,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = true
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/prequery_ft_overdraft.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/prequery_completude_overdraft.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/compute_and_insert_into_ft_overdraft.hql"
 
