--- a/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf
+++ b/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf
@@ -6,12 +6,12 @@ flux.name = "LOAD_IT_SMSC_MVAS_A2P"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/MVAS/DATA_MVAS/*"
-flux.hdfs.dest-temp-tt-dir = "/PROD/TT/MVAS/DATA_MVAS/"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/MVAS/MVAS_DATA/*"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/MVAS/MVAS_DATA/"
 
 flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/TT/MVAS/DATA_MVAS/*"
-flux.hdfs.dest.arch-dir = "/PROD/ARCH/MVAS/DATA_MVAS/"
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/MVAS/MVAS_DATA/*"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/MVAS/"
 flux.hdfs.dest.has-sub-dir = false
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
