creation des fichiers compute_and_insert_into_ft_edr_edr_prpd_eqt.hql et prequery_completude_prpd_eqt.hql avec insertion du premier contenu et mis à jour du fichier de config afin de checker la completude des cdr in

--- a/PROD/CONF/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf
+++ b/PROD/CONF/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf
@@ -22,13 +22,18 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/EQUATION_PREPAYEE/prequery_ft_edr_prpd_eqt.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/EQUATION_PREPAYEE/prequery_completude_prpd_eqt.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/EQUATION_PREPAYEE/compute_and_insert_into_ft_edr_prpd_eqt.hql"
+
+//flux.post-exec-queries += "/PROD/SCRIPTS/FT/EQUATION_PREPAYEE/compute_and_insert_into_ft_a_edr_prpd_eqt.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 //Prequery variables
+flux.hive.extra-conf += "--hivevar table_name=MON.FT_EDR_PRPD_EQT"
 flux.hive.extra-conf += "--hivevar partition_name=EVENT_DATE"
+flux.hive.extra-conf += "--hivevar list_cdr_type='ZTE_DATA_CDR','ZTE_VOICE_SMS_CDR','ZTE_TRANSFER_CDR','ZTE_EMERGENCY_DATA_CDR','ZTE_EMERGENCY_CREDIT_CDR','ZTE_ADJUSTMENT_CDR','ZTE_SUBSCRIPTION_CDR','ZTE_RECHARGE_CDR','ZTE_DEL_EXPBAL','ZTE_BALRESET_CDR'"
 flux.hive.extra-conf += "--hivevar date_offset=20"
