added load it smsc mvas a2p and checkfiles to system_cron_task

--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -841,6 +841,42 @@ crontasks +=
     ]
   }
 
+//--###**************************************#####---
+//--###        CHARGEMENT & CALCULS MVAS
+//--###**************************************#####---
+// Chargement de IT-SMSC-MVAS-A2P
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_SMSC_MVAS_A2P",
+    cron = "0 30 */2 * * ?",
+    configFile = "/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+// Chargement de IT-SMSC-MVAS-A2P-CHECKFILES
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_SMSC_MVAS_A2P_CHECKFILES",
+    cron = "0 30 */2 * * ?",
+    configFile = "/PROD/CONF/MVAS/load-it-smsc-mvas-a2p-checkfiles.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
 //*/
 //
 ////--###**************************************#####---
