added load it kpi adjustment and om transactions to system_cron_task

--- a/PROD/CONF/system-cron-task.conf
+++ b/PROD/CONF/system-cron-task.conf
@@ -577,6 +577,20 @@ crontasks +=
     ]
   }
 
+// Chargement KPI_OM_TRANSACTIONS
+crontasks +=
+  {
+    instanceId = "LOAD_KPI_OM_TRANSACTIONS",
+    cron = "0 30 */2 * * ?",
+    configFile = "/PROD/CONF/OM/load-kpi-om-transactions.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 // Chargement des logs Nifi
@@ -840,6 +854,22 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+// Chargement KPI_ADJUSTMENT
+crontasks +=
+  {
+    instanceId = "LOAD_KPI_ADJUSTMENT",
+    cron = "0 30 */2 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 
 //--###**************************************#####---
 //--###        CHARGEMENT & CALCULS MVAS
