--- a/PROD/CONF/IN_ZTE/IT/load-it-zte-check_file.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-zte-check_file.conf
@@ -24,4 +24,4 @@ flux.exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/CHECK_FILE/insert_into_it_zte_check
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-
+flux.hive.extra-conf += "--hivevar date_offset=90"
