--- a/PROD/CONF/MVAS/load-it-smsc-mvas-a2p-checkfiles.conf
+++ b/PROD/CONF/MVAS/load-it-smsc-mvas-a2p-checkfiles.conf
@@ -11,7 +11,7 @@ flux.hdfs.dest-temp-tt-dir = "/PROD/TT/MVAS/MVAS_CHECKFILES/"
 
 flux.hdfs.move-to-arch = true
 flux.hdfs.src-arch-dir-regex = "/PROD/TT/MVAS/MVAS_CHECKFILES/*"
-flux.hdfs.dest.arch-dir = "/PROD/ARCH/MVAS/MVAS_CHECKFILES/"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/MVAS/"
 flux.hdfs.dest.has-sub-dir = false
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
