--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-prpd-eqt.conf
@@ -1,6 +1,6 @@
---***********************************************************---
------------- Load FT with cron manager FT_PRPD_EQT-------------
----***********************************************************---
+//--***********************************************************---
+//------------ Load FT with cron manager FT_PRPD_EQT-------------
+//---***********************************************************---
 
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
